MCR-2364 remove JPA dependency from MCRSession (#1216)
added MCRPersistenceTransaction as an interface for this indirection
while keeping support for "onCommit" jobs