@@ -24,7 +24,6 @@ import static org.mycore.common.events.MCRSessionEvent.Type.passivated;
 import java.net.InetAddress;
 import java.net.URI;
 import java.net.UnknownHostException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Hashtable;
 import java.util.Iterator;
@@ -36,6 +35,7 @@ import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Queue;
+import java.util.ServiceLoader;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
@@ -45,13 +45,10 @@ import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-
-import javax.persistence.EntityTransaction;
+import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.mycore.backend.hibernate.MCRHIBConnection;
-import org.mycore.backend.jpa.MCREntityManagerProvider;
 import org.mycore.common.config.MCRConfiguration2;
 import org.mycore.common.events.MCRSessionEvent;
 import org.mycore.common.events.MCRShutdownHandler;
@@ -72,6 +69,9 @@ import com.google.common.util.concurrent.ThreadFactoryBuilder;
 public class MCRSession implements Cloneable {
 
     private static final URI DEFAULT_URI = URI.create("");
+
+    public static final ServiceLoader<MCRPersistenceTransaction> TRANSACTION_SERVICE_LOADER = ServiceLoader
+        .load(MCRPersistenceTransaction.class, MCRClassTools.getClassLoader());
 
     /** A map storing arbitrary session data * */
     private Map<Object, Object> map = new Hashtable<>();
@@ -101,15 +101,20 @@ public class MCRSession implements Cloneable {
     private Locale locale = null;
 
     /** The unique ID of this session */
-    private String sessionID = null;
+    private String sessionID;
 
-    private String ip = null;
+    private String ip;
 
     private long loginTime, lastAccessTime, thisAccessTime, createTime;
 
     private boolean dataBaseAccess;
 
-    private ThreadLocal<EntityTransaction> transaction = new ThreadLocal<>();
+    private ThreadLocal<List<MCRPersistenceTransaction>> transaction = ThreadLocal
+        .withInitial(() -> TRANSACTION_SERVICE_LOADER
+            .stream()
+            .map(ServiceLoader.Provider::get)
+            .filter(MCRPersistenceTransaction::isReady)
+            .collect(Collectors.toUnmodifiableList()));
 
     private StackTraceElement[] constructingStackTrace;
 
@@ -153,6 +158,7 @@ public class MCRSession implements Cloneable {
         });
     }
 
+
     /**
      * The constructor of a MCRSession. As default the user ID is set to the value of the property variable named
      * 'MCR.Users.Guestuser.UserName'.
@@ -160,7 +166,8 @@ public class MCRSession implements Cloneable {
     MCRSession() {
         userInformation = guestUserInformation;
         setCurrentLanguage(MCRConfiguration2.getString("MCR.Metadata.DefaultLang").orElse(MCRConstants.DEFAULT_LANG));
-        dataBaseAccess = MCRHIBConnection.isEnabled();
+        dataBaseAccess = MCRConfiguration2.getBoolean("MCR.Persistence.Database.Enable").orElse(true)
+            && TRANSACTION_SERVICE_LOADER.stream().findAny().isPresent();
 
         accessCount = new AtomicInteger();
         concurrentAccess = new AtomicInteger();
@@ -216,7 +223,7 @@ public class MCRSession implements Cloneable {
             mapChanged = false;
             final Set<Entry<Object, Object>> entrySet = Collections.unmodifiableMap(map).entrySet();
             final Map.Entry<Object, Object>[] entryArray = entrySet.toArray(emptyEntryArray);
-            mapEntries = Collections.unmodifiableList(Arrays.asList(entryArray));
+            mapEntries = List.of(entryArray);
         }
         return mapEntries;
     }
@@ -270,7 +277,7 @@ public class MCRSession implements Cloneable {
     public final void setCurrentIP(String newip) {
         //a necessary condition for an IP address is to start with an hexadecimal value or ':'
         if (Character.digit(newip.charAt(0), 16) == -1 && newip.charAt(0) != ':') {
-            LOGGER.error("Is not a valid IP address: " + newip);
+            LOGGER.error("Is not a valid IP address: {}", newip);
             return;
         }
         try {
@@ -307,7 +314,7 @@ public class MCRSession implements Cloneable {
     }
 
     public void setFirstURI(Supplier<URI> uri) {
-        if (!firstURI.isPresent()) {
+        if (firstURI.isEmpty()) {
             firstURI = Optional.of(uri.get());
         }
     }
@@ -344,7 +351,7 @@ public class MCRSession implements Cloneable {
         } else {
             LOGGER.debug("deactivate currentThreadCount: {}", currentThreadCount.get().get());
         }
-        if (!firstURI.isPresent()) {
+        if (firstURI.isEmpty()) {
             firstURI = Optional.of(DEFAULT_URI);
         }
         onCommitTasks.remove();
@@ -362,7 +369,7 @@ public class MCRSession implements Cloneable {
     void fireSessionEvent(MCRSessionEvent.Type type, int concurrentAccessors) {
         MCRSessionEvent event = new MCRSessionEvent(this, type, concurrentAccessors);
         LOGGER.debug(event);
-        MCRSessionMgr.getListeners().stream().forEach(l -> l.sessionEvent(event));
+        MCRSessionMgr.getListeners().forEach(l -> l.sessionEvent(event));
     }
 
     public long getThisAccessTime() {
@@ -378,9 +385,7 @@ public class MCRSession implements Cloneable {
      */
     public void beginTransaction() {
         if (dataBaseAccess) {
-            EntityTransaction entityTransaction = MCREntityManagerProvider.getCurrentEntityManager().getTransaction();
-            entityTransaction.begin();
-            transaction.set(entityTransaction);
+            transaction.get().forEach(MCRPersistenceTransaction::begin);
         }
     }
 
@@ -389,7 +394,7 @@ public class MCRSession implements Cloneable {
      * @return boolean indicating whether the transaction has been marked for rollback
      */
     public boolean transactionRequiresRollback() {
-        return isTransactionActive() && transaction.get().getRollbackOnly();
+        return isTransactionActive() && transaction.get().stream().anyMatch(MCRPersistenceTransaction::getRollbackOnly);
     }
 
     /**
@@ -397,8 +402,7 @@ public class MCRSession implements Cloneable {
      */
     public void commitTransaction() {
         if (isTransactionActive()) {
-            transaction.get().commit();
-            MCREntityManagerProvider.getCurrentEntityManager().clear();
+            transaction.get().forEach(MCRPersistenceTransaction::commit);
             transaction.remove();
         }
         submitOnCommitTasks();
@@ -410,8 +414,7 @@ public class MCRSession implements Cloneable {
      */
     public void rollbackTransaction() {
         if (isTransactionActive()) {
-            transaction.get().rollback();
-            MCREntityManagerProvider.getCurrentEntityManager().close();
+            transaction.get().forEach(MCRPersistenceTransaction::rollback);
             transaction.remove();
         }
     }
@@ -422,13 +425,7 @@ public class MCRSession implements Cloneable {
      * @return true if the transaction is still alive
      */
     public boolean isTransactionActive() {
-        if (!dataBaseAccess) {
-            return false;
-        }
-        if (transaction.get() == null) {
-            transaction.set(MCREntityManagerProvider.getCurrentEntityManager().getTransaction());
-        }
-        return transaction.get() != null && transaction.get().isActive();
+        return dataBaseAccess && transaction.get().stream().anyMatch(MCRPersistenceTransaction::isActive);
     }
 
     public StackTraceElement[] getConstructingStackTrace() {
